# moco

./: README.md  cspell.json
.github/: dependabot.yaml
.github/workflows/: lint.yaml  release.yaml  test.yaml
machine/rust/: Cargo.toml
machine/rust/src/: cons.rs  error.rs  lib.rs  machine.rs  main.rs  value.rs
rust/: Cargo.toml
vm/rust/: Cargo.toml
vm/rust/src/: configuration.rs  cons.rs  error.rs  heap.rs  instruction.rs  integer.rs  lib.rs  main.rs  memory.rs  number.rs  operation_set.rs  value.rs  vm.rs
vm/rust/src/operation_set/: void.rs
vm/rust/src/value/: inner.rs
vm/rust/src/value/inner/: i32.rs  i64.rs
