[package]
name = "moco-vm"
version = "0.1.0"
edition = "2024"
description = "The tiny virtual machine"
readme = "../../README.md"
repository = "https://github.com/raviqqe/moco-vm"
license = "Unlicense"
keywords = ["interpreter", "language"]
categories = ["no-std", "no-std::no-alloc", "wasm"]

[dependencies]
